no change and config raspberry pi 3

--- a/client/src/app/components/job/job.component.html
+++ b/client/src/app/components/job/job.component.html
@@ -45,10 +45,10 @@
                     </div>
                 </main>
 
-                <form class="flex flex-row flex-space-between" id="send-job">
+                <!-- <form class="flex flex-row flex-space-between" id="send-job">
                     <input #job type="text" name="text" class="flex flex-1">
                     <button class="button-primary" (click)="sendJob(job.value); job.value = ''">Send</button>
-                </form>
+                </form> -->
             </div>
         </div>
     </main>
