--- a/client/src/app/components/nothing/nothing.component.scss
+++ b/client/src/app/components/nothing/nothing.component.scss
@@ -5,8 +5,7 @@
     bottom: 0;
     right: 0;
     font-size: 100%;
-    font-family: 'Dosis', sans-serif;
-    overflow: hidden;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .background {
@@ -15,8 +14,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background: #ECF0F1;
-    overflow: hidden;
+    background: transparent;
 }
 
 .panel-background {}
@@ -27,7 +25,7 @@
     left: 0;
     bottom: calc(50% + 5px);
     right: 0;
-    background-color: #2C3E50;
+    background: transparent;
 }
 
 .panel-bottom {
@@ -36,7 +34,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: #2C3E50;
+    background: transparent;
 }
 
 .panel-center {
@@ -44,6 +42,7 @@
     right: 0;
     width: calc(50% - 150px);
     top: calc(50% - 25px);
+    overflow: hidden;
 }
 
 .input-username {
@@ -51,6 +50,7 @@
     position: absolute;
     bottom: 0;
     left: calc(50% - 150px);
+    overflow: hidden;
 }
 
 .input-password {
@@ -58,15 +58,12 @@
     position: relative;
     top: 0;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .input-submit {
-    background-color: #2C3E50;
-    color: #ECF0F1;
+    overflow: hidden;
     box-shadow: 0 0 1px 4px #ECF0F1;
-    border-radius: 50px 0 0 50px;
-    width: 100%;
-    height: 50px;
 }
 
 input {
