--- a/client/src/app/components/monitor/monitor.component.html
+++ b/client/src/app/components/monitor/monitor.component.html
@@ -1,3 +1,15 @@
 <div class="monitor-content">
-    <button type="button" (click)="logOut()">logout</button>
+    <div class="content-panel">
+        <div class="content">
+            <div class="scrollbar" id="style-scrollbar">
+                <app-jobs></app-jobs>
+            </div>
+        </div>
+        <div class="bar-prod"></div>
+    </div>
+    <div class="main-panel">
+        <app-main-control></app-main-control>
+    </div>
+    <div class="footer-panel">
+    </div>
 </div>
