--- a/client/src/app/components/proxy.component.html
+++ b/client/src/app/components/proxy.component.html
@@ -1,8 +1,14 @@
 <div class="background">
-    <div class="panel-background">
+    <div class="panel-background" [ngStyle]="getRotation(o)">
         <router-outlet #o="outlet"></router-outlet>
         <form [formGroup]="loginForm" (ngSubmit)="login($event)">
             <div class="panel-top" [@paneltop]="getState(o)">
+                <div class="title">
+                    <div class="title-word">Job Monitor</div>
+                    <div class="title-word">Feuille@Feuille</div>
+                    <div class="title-word">L.M.</div>
+                </div>
+
                 <div class="input-username">
                     <input formControlName="username" type="text" placeholder="username" required>
                 </div>
