--- a/client/src/app/components/monitor/monitor.component.scss
+++ b/client/src/app/components/monitor/monitor.component.scss
@@ -3,5 +3,86 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background-color: #E74C3C;
+}
+
+.content-panel {
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.bar-prod {
+    position: absolute;
+    top: 0px;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    border: 2px dashed #2C3E50;
+}
+
+.bar-prod::before {
+    content: 'STUDIO';
+    position: absolute;
+    top: 60px;
+    left: calc(50% - 155px);
+    width: 150px;
+    color: #2C3E50;
+    text-align: right;
+    padding-right: 5px;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.bar-prod::after {
+    content: 'PRODUCTION';
+    position: absolute;
+    top: 60px;
+    left: calc(50% + 5px);
+    width: 150px;
+    color: #2C3E50;
+    text-align: left;
+    padding-left: 5px;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.main-panel {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    height: 50px;
+}
+
+.footer-panel {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    height: 50px;
+    // background: rgba(0, 0, 0, 0.2);
+}
+
+.content {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background: #F5F5F5;
+}
+
+.scrollbar {
+    float: left;
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+    direction: rtl;
+}
+
+.cadre-panel {
+    position: absolute;
+    padding: 50px;
+    top: 50px;
+    bottom: 50px;
+    left: 0px;
+    right: 0px;
+    background: rgba(255, 255, 255, 0.4);
+    overflow-y: scroll;
 }
