--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -27,6 +27,30 @@ $monitor-app-theme: mat-light-theme($monitor-app-primary, $monitor-app-accent, $
     margin-top: 15em;
 }
 
+*,
+*:after,
+*:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
+
 .full-width {
     width: 100%;
 }
@@ -38,4 +62,19 @@ $monitor-app-theme: mat-light-theme($monitor-app-primary, $monitor-app-accent, $
 .spacer {
     width: 100%;
     height: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #ECF0F1;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: #ECF0F1;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #E74C3C;
+    border-radius: 6px;
+    width: 6px;
 }
